# tenant-advocate-app

./: .env.example  README.md  pyproject.toml
app/: audit_tab.py  chat_tab.py  draft_tab.py  session_state.py  sidebar.py  streamlit_app.py
backend_client/: api_client.py  mock_backend.py
utils/: pdf_export_utils.py  pdf_utils.py  response_utils.py
