[project]
name = "tenant-advocate-app"
version = "0.1.0"
description = "Streamlit frontend for the Tenant & Housing Rights Advocate, connecting users to a FastAPI-based Agentic RAG backend for lease and tenancy rights Q&A."
authors = [
    {name = "alibg3",email = "alison.1702@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit (>=1.56.0,<2.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pypdf (>=6.10.2,<7.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
